--- a/WolBrowser/WolBrowser/MainPage.xaml
+++ b/WolBrowser/WolBrowser/MainPage.xaml
@@ -37,11 +37,11 @@
     <!--Sample code showing usage of ApplicationBar-->
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Images/appbar.back.rest.png" Text="About" 
+            <shell:ApplicationBarIconButton IconUri="/Images/appbar.back.rest.png" Text="Back" 
                                             x:Name="appBarIconButtonBack" Click="appBarIconButtonBack_Click"/>
             <shell:ApplicationBarIconButton IconUri="/Images/appbar.refresh.rest.png" Text="Refresh"
                                             x:Name="appBarIconButtonRefresh" Click="appBarIconButtonRefresh_Click"/>
-            <shell:ApplicationBarIconButton IconUri="/Images/appbar.next.rest.png" Text="About" 
+            <shell:ApplicationBarIconButton IconUri="/Images/appbar.next.rest.png" Text="Forward" 
                                             x:Name="appBarIconButtonForward" Click="appBarIconButtonForward_Click"/>
             <shell:ApplicationBar.MenuItems>
                 <!--<shell:ApplicationBarMenuItem Text="Fullscreen"/>-->
